--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   flame: 0.14.1
   toast: ^0.1.5
+  zoom_widget: ^0.1.3
   fluttertoast: ^3.1.3
   horizontal_data_table: ^1.0.5+1
 
